# NYX

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.cargo/: config.toml
.github/: ISSUE_TEMPLATE
.github/workflows/: rust.yml
plugins/: README.md
src/: about.rs  logs.rs  main.rs  utils.rs
src/application/: mod.rs
src/application/templates/: mod.rs
src/cleanup/: mod.rs
src/doctor/: helper.rs  mod.rs
src/gh/: mod.rs
src/git/: mod.rs
src/health/: helper.rs  mod.rs
src/hello/: helper.rs  mod.rs
src/init/: mod.rs
src/nxfs/: blacklist.rs  config.rs  mod.rs  nxp.rs  nxs.rs
src/plugins/: mod.rs  parser.rs
src/projects/: bin.rs  binary.rs  mod.rs  nxp.rs  nxs.rs
src/projects/copy/: mod.rs
src/projects/delete/: mod.rs
src/projects/list/: mod.rs
src/projects/open/: mod.rs
src/projects/remove/: mod.rs
src/projects/templates/: mod.rs
src/projects/todo/: helpers.rs  mod.rs  parse.rs
src/projects/update/: mod.rs
src/update/: mod.rs
src/upgrade/: mod.rs
src/utils/: editor.rs  env.rs  fsys.rs  log.rs  mod.rs  prompt.rs  sys.rs
