[package]
name = "nyx"
version = "1.4.0"
edition = "2021"
authors = ["Elouan DA COSTA PEIXOTO <elouandacostapeixoto@gmail.com>"]
description = "A CLI tool for managing your system."

[dependencies]
inquire = "0.7.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tabled = "0.18.0"
colored = "3.0.0"
throbber = "0.1"
regex = "1.11.1"