[package]
name = "nyx"
version = "2.3.2"
edition = "2021"
authors = ["Elouan DA COSTA PEIXOTO <elouandacostapeixoto@gmail.com>"]
description = "A CLI tool for managing your projects."

[dependencies]
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tabled = "0.18.0"
colored = "3.0.0"
throbber = "0.1"
regex = "1.11.1"
lrncore = { git = "https://github.com/Lrn-projects/LrnCore.git", version = "0.2.0", branch="main" }
bincode = "1.0.0"
sha1 = "0.10.6"
toml = "0.8.20"
chrono = "0.4.40"
systemstat = "0.2.4"
